--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,36 @@
-MISSKEY_HOST :"example.com"
-AUTH_TOKEN:"API token Please allow post/del note"
-RSS_URL:"https://example.com/rss/news/cat0.xml"
+# Misskey instance hostname (without https://)
+MISSKEY_HOST=example.tld
 
+# Authentication token (must have posting permissions)
+AUTH_TOKEN=your_auth_token_here
+
+
+# ---- RSS URL Configuration ----
+# Two methods to specify RSS feed URLs:
+# Recommended: Use numbered format (RSS_URL_1, RSS_URL_2, ...)
+# Legacy comma-separated format is also supported for backward compatibility.
+# Note: If a number is skipped, all subsequent URLs are ignored.
+RSS_URL_1=https://example.tld/rss/hoge.xml
+RSS_URL_2=https://example.tld/rss/fuga.xml
+RSS_URL_3=https://blog.example.tld/feed
+
+# Legacy format (comma-separated)
+# Note: Numbered format takes priority.
+# If both are set, the numbered format will be used.
+# RSS_URL=https://example.tld/rss1,https://example.tld/rss2,https://example.tld/rss3
+
+
+
+# ---- Optional Settings ----
+# RSS fetch interval (seconds)
+# Default: 30
+# FETCH_INTERVAL=30
+
+# Rate limit: Maximum burst of consecutive posts
+# Default: 3
+# MAX_REQUESTS=3
+
+# Rate limit: Token refill interval (seconds)
+# When exceeding max burst, one post becomes available every N seconds.
+# Default: 10
+# REFILL_INTERVAL=10
