--- a/.env.example
+++ b/.env.example
@@ -36,3 +36,6 @@ RSS_URL_3=https://blog.example.tld/feed
 # When exceeding max burst, one post becomes available every N seconds.
 # Default: 10
 # REFILL_INTERVAL=10
+
+# Post only local server (Default: false)
+# LOCAL_ONLY=true
